--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<meta name="google-site-verification" content="Iwjf6NgCcP31ncbrOOrSmsEoNULcJ0AvHr4_m4wxWcM" />
+<meta name="google-site-verification" content="f3buidMGNq5OsaWQPM5MTCoxo4It9oUwfSK9pUUAt4E" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="title" content="How Quickly Can Roadside Services Typically Respond in an Emergency?">
@@ -136,7 +136,7 @@
   <!-- Mobile Tire Services and On-Site Repairs Section -->
   <div class="container section">
     <h2>Mobile Tire Services and On-Site Repairs</h2>
-    <p>Mobile <a href=""><strong>tires services</strong></a> are becoming increasingly popular because of their efficiency and convenience. Instead of towing a vehicle to a repair shop, technicians bring everything needed directly to the driver's location. This innovation has drastically improved response times, especially for tire-related emergencies. In Stanton CA, these services allow drivers to get back on the road faster without interrupting their schedules.</p>
+    <p>Mobile <a href="https://kivenlocalseo-cyber.github.io/J-S-ROADSIDE-SERVICES/"><strong>tires services</strong></a> are becoming increasingly popular because of their efficiency and convenience. Instead of towing a vehicle to a repair shop, technicians bring everything needed directly to the driver's location. This innovation has drastically improved response times, especially for tire-related emergencies. In Stanton CA, these services allow drivers to get back on the road faster without interrupting their schedules.</p>
   </div>
 
   <!-- Battery Installs and On-the-Spot Solutions Section -->
@@ -170,4 +170,5 @@
   </div>
 
 </body>
+
 </html>
